[package]
name = "wildbow_epub_gen"
version = "0.2.0"
authors = ["Scraeling <scraeling@protonmail.com>"]
edition = "2018"

[dependencies]
epub-builder = "0.4"
reqwest = "0.11"
tokio = { version = "1.12", features = ["full"] }
futures = "0.3"
scraper = "0.12"
chrono = "0.4"
regex = "1.5"
hex = "0.4"
once_cell = "1.8"

[profile.release]
lto = true
codegen-units = 2
panic = 'abort'